feat: added sidebar fragment

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,11 @@
 </head>
 
 <body class="bg-light">
+    <div class="d-flex">
+        <th:block th:replace="~{fragments/fragments :: sidebar('Home')}"></th:block>
+
+    </div>
+
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
             <h2>Welcome, <span th:text="${operator.username}">Username</span>!</h2>
