--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -1,116 +1,151 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<th:block th:fragment="head">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}">
-    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.10.0/font/bootstrap-icons.css}">
-</th:block>
 
-<th:block th:fragment="scripts">
-    <script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
-</th:block>
+<head>
+    <th:block th:fragment="head">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}">
+        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.css}">
+    </th:block>
+</head>
 
-<th:block th:fragment="sidebar(current)">
-    <div class="bg-white h-100 position-fixed" id="sidebar">
-        <div class="position-sticky d-flex flex-column">
+<body>
+    <th:block th:fragment="sidebar(current)">
+        <div class="bg-white h-100" id="sidebar">
+            <div class=" d-flex flex-column h-100">
+                <!-- Hamburger Button per Mobile -->
+                <button class="btn btn-dark d-md-none m-1" type="button" id="sidebarToggle" data-bs-theme="dark"
+                    data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span> <span class="d-none"></span>
+                </button>
 
-            <!-- Hamburger Button per Mobile -->
-            <button class="btn btn-dark d-md-none m-1" type="button" id="sidebarToggle" data-bs-theme="dark"
-                data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> <span class="d-none"></span>
-            </button>
+                <!-- Contenuto della Sidebar -->
+                <div class="collapse d-md-block h-100" id="sidebarMenu">
+                    <!-- Contenitore flessibile per tutto -->
+                    <div class="d-flex flex-column h-100">
 
-            <!-- Menu della Sidebar -->
-            <div class="collapse d-md-block">
-                <!-- Logo in cima alla Sidebar -->
-                <div class="d-flex align-items-center justify-content-center p-3 my-3">
-                    <img th:src="@{/img/logo.png}" alt="logo">
-                </div>
+                        <!-- Logo -->
+                        <div class="d-flex align-items-center justify-content-center p-3 my-3">
+                            <img th:src="@{/img/logo.png}" alt="logo">
+                        </div>
 
-                <ul class="nav flex-column p-3">
-                    <li class="nav-item mb-3">
-                        <a class="btn btn-light w-100 d-flex align-items-center"
-                            th:classappend="${current eq 'Home' ? 'bg-dark text-white rounded fw-semibold' : ''}"
-                            th:href="@{/home}">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5" />
-                            </svg>
-                            <span class="ms-3">Dashboard</span>
-                        </a>
-                    </li>
+                        <!-- Menu principale -->
+                        <ul class="nav flex-column p-3">
+                            <li class="nav-item mb-3">
+                                <a class="btn btn-light w-100 d-flex align-items-center"
+                                    th:classappend="${current eq 'Home' ? 'bg-dark text-white rounded fw-semibold' : 'bg-transparent'}"
+                                    th:href="@{/home}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                        class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5" />
+                                    </svg>
+                                    <span class="ms-3">Homepage</span>
+                                </a>
+                            </li>
 
-                    <li class="nav-item mb-3">
-                        <a class="btn btn-light bg-transparent w-100 d-flex align-items-center"
-                            th:classappend="${current eq 'Tickets' ? 'btn-dark text-white' : ''}" th:href="@{/}">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-ticket-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M1.5 3A1.5 1.5 0 0 0 0 4.5V6a.5.5 0 0 0 .5.5 1.5 1.5 0 1 1 0 3 .5.5 0 0 0-.5.5v1.5A1.5 1.5 0 0 0 1.5 13h13a1.5 1.5 0 0 0 1.5-1.5V10a.5.5 0 0 0-.5-.5 1.5 1.5 0 0 1 0-3A.5.5 0 0 0 16 6V4.5A1.5 1.5 0 0 0 14.5 3z" />
-                            </svg>
-                            <span class="ms-3">Tickets</span>
-                        </a>
-                    </li>
+                            <li class="nav-item mb-3">
+                                <a class="btn btn-light d-flex align-items-center"
+                                    th:classappend="${current eq 'Tickets' ? 'bg-dark text-white rounded fw-semibold' : 'bg-transparent'}"
+                                    th:href="@{/tickets}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                        class="bi bi-ticket-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M1.5 3A1.5 1.5 0 0 0 0 4.5V6a.5.5 0 0 0 .5.5 1.5 1.5 0 1 1 0 3 .5.5 0 0 0-.5.5v1.5A1.5 1.5 0 0 0 1.5 13h13a1.5 1.5 0 0 0 1.5-1.5V10a.5.5 0 0 0-.5-.5 1.5 1.5 0 0 1 0-3A.5.5 0 0 0 16 6V4.5A1.5 1.5 0 0 0 14.5 3z" />
+                                    </svg>
+                                    <span class="ms-3">Tickets</span>
+                                </a>
+                            </li>
 
-                    <li class="nav-item mb-3">
-                        <a class="btn btn-light bg-transparent w-100 d-flex align-items-center"
-                            th:classappend="${current eq 'Tickets' ? 'btn-dark text-white' : ''}" th:href="@{/}">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-people-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
-                            </svg>
-                            <span class="ms-3">Operators</span>
-                        </a>
-                    </li>
-                </ul>
+                            <li class="nav-item mb-3" sec:authorize="hasRole('ADMIN')">
+                                <a class="btn btn-light d-flex align-items-center"
+                                    th:classappend="${current eq 'Operators' ? 'bg-dark text-white rounded fw-semibold' : 'bg-transparent'}"
+                                    th:href="@{/operators}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-people-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                                    </svg>
+                                    <span class="ms-3">Operators</span>
+                                </a>
+                            </li>
+                        </ul>
 
-                <div class="mt-auto">
-                    <ul class="nav  flex-column p-3">
                         <!-- Profile Section -->
-                        <li class="nav-item mb-3">
-                            <div class="d-flex align-items-center">
-                                <!-- Aggiungi l'operatore profilo immagine -->
-                                <img th:src="@{${operator.profileImage}}" alt="Profile Image"
-                                    class="rounded-circle border border-dark" width="50" height="50">
-                                <span class="ms-3" th:text="${operator.username}">Username</span>
-                            </div>
-                        </li>
+                        <div class="mt-auto">
+                            <ul class="nav flex-column p-3" th:if="${loggedOperator != null}">
+                                <li class="nav-item mb-3">
+                                    <div class="d-flex align-items-center">
+                                        <img th:src="@{${loggedOperator.profileImage != null ? loggedOperator.profileImage : '/img/profile/default.png'}}"
+                                            alt="Profile Image" class="rounded-circle border border-dark" width="50"
+                                            height="50">
+                                        <a th:href="@{/operators/profile}"
+                                            class="ms-3 text-decoration-none text-dark fw-semibold">
+                                            <span th:text="${loggedOperator.username}">Username</span>
+                                        </a>
+                                    </div>
+                                </li>
 
-                        <!-- Settings -->
-                        <li class="nav-item mb-3">
-                            <a class="btn btn-light bg-transparent w-100 d-flex align-items-center" th:href="@{/}">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                    class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
-                                </svg> <span class="ms-3">Settings</span>
-                            </a>
-                        </li>
+                                <!-- Logout -->
+                                <li class="nav-item mb-3">
+                                    <button type="button"
+                                        class="btn btn-light bg-transparent w-100 d-flex align-items-center"
+                                        data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                            fill="currentColor" class="bi bi-arrow-right-square-fill"
+                                            viewBox="0 0 16 16">
+                                            <path
+                                                d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1" />
+                                        </svg>
+                                        <span class="ms-3">Logout</span>
+                                    </button>
+                                </li>
 
-                        <!-- Logout -->
-                        <li class="nav-item mb-3">
-                            <a class="btn btn-light bg-transparent w-100 d-flex align-items-center"
-                                th:href="@{/logout}">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                    class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1" />
-                                </svg> <span class="ms-3">Logout</span>
-                            </a>
-                        </li>
-                    </ul>
+
+                            </ul>
+                        </div>
+                    </div> <!-- fine flex-column -->
                 </div>
             </div>
         </div>
+    </th:block>
+
+    <!-- Logout Modal -->
+    <th:block th:fragment="logout-modal">
+        <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content shadow-sm">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Confirm Logout</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to log out?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cancel</button>
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-dark">Logout</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </th:block>
+
+
+
+
+
+    <!-- Scripts -->
+    <th:block th:fragment="scripts">
+        <script th:src="@{/webjars/popper.js/2.11.7/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
+    </th:block>
     </div>
-
-</th:block>
-
-
+    </div>
+</body>
 
 </html>
