--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 
                         <!-- Messaggio di errore -->
                         <div th:if="${param.error}" class="alert alert-danger mt-3" role="alert">
-                            Username o password errati. Riprova.
+                            Incorrect username or password. Please try again.
                         </div>
                     </div>
                 </div>
