--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,8 @@
 
             <!-- Main Content -->
             <div class="col col-md-9 col-lg-10 px-4 py-4">
-                <h1 th:text="'Benvenuto, ' + ${loggedUser.username} + '!'"></h1>
+                <h1 th:text="'Benvenuto, ' + ${loggedOperator.username} + '!'"></h1>
+
                 <div class="alert alert-success alert-dismissible fade show mt-3" th:if="${successMessage}"
                     role="alert">
                     <span th:text="${successMessage}"></span>
